--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
     "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build:test": "vue-tsc && vite build --mode test",
+    "build:pro": "vue-tsc && vite build --mode production"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.7",
     "vue": "^3.4.37"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
     "@eslint/js": "^9.11.1",
     "@vitejs/plugin-vue": "^5.1.2",
+    "element-plus": "^2.8.4",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
@@ -29,24 +34,20 @@
     "eslint-plugin-vue": "^9.28.0",
     "globals": "^15.9.0",
     "husky": "^8.0.0",
+    "mockjs": "^1.1.0",
+    "pinia": "^2.2.4",
     "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
     "sass": "^1.79.4",
     "sass-loader": "^16.0.2",
-    "stylelint": "^16.9.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recess-order": "^5.1.1",
-    "stylelint-config-recommended-scss": "^14.1.0",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.7.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.8.0",
     "vite": "^5.4.1",
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue-router": "^4.4.5",
     "vue-tsc": "^2.0.29"
   }
 }
