--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "globals": "^15.9.0",
     "husky": "^8.0.0",
     "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.2.4",
     "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
